# coinbase-ai-trader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  REBUILD_STANDARD.md  launcher.py  powershell_commands.txt  pyproject.toml  retrain.py  start_app.py  start_backend.ps1  start_frontend.ps1
.github/workflows/: ci.yml
backend/: config.py  database.py  main.py  requirements-dev.txt  requirements.txt  train_worker.py
backend/agents/: cnn_agent.py  market_scanner.py  momentum_agent_cb.py  order_executor.py  position_sizer.py  scalp_agent.py  signal_generator.py  tech_agent_cb.py
backend/clients/: coinbase_client.py
backend/data/: lgbm_filter.py
backend/services/: binance_funding_history.py  binance_sentiment.py  deribit_iv.py  fear_greed.py  history_backfill.py  hmm_regime.py  macro_signals.py  outcome_tracker.py  portfolio_tracker.py  ws_subscriber.py
backend/tests/: conftest.py  test_api_security.py  test_atr_stops.py  test_binance_funding_history.py  test_bsm_integration.py  test_checkin.py  test_cnn_agent.py  test_cnn_risk_exits.py  test_database.py  test_fear_greed.py  test_history_backfill.py  test_lgbm_filter.py  test_macro_integration.py  test_macro_signals.py  test_market_scanner.py  test_momentum_agent_cb.py  test_momentum_entry_filter.py  test_position_sizer.py  test_scalp_agent.py  test_signal_generator_new.py  test_signal_improvements.py  test_startup_sequence.py  test_tech_agent_cb.py  test_train_cloud.py  test_train_watchdog.py
docs/superpowers/plans/: 2026-04-25-remove-scalp-momentum-agents.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AgentsDashboard.tsx  (+8 more)
tools/: checkin.py  colab_train.ipynb  requirements-train.txt  train_cloud.py
(+3 files in other folders)
